[package]
name = "rring"
version = "0.1.0"
edition = "2021"

authors = ["Po-Yeh Chen <smb374.cs08@nctu.edu.tw>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"
uring-sys = "0.7.4"
libc = "0.2.107"
bitflags = "1.3.2"
jemallocator = "0.3.2"
anyhow = "1.0.51"
